practice/labs/ch13-networking/lab02-network-policies/ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-policy
spec:
  podSelector:
    matchLabels:
      app: vault
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cashier
